# dnstracer-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
src/: args.rs  main.rs  opt_name.rs  resolver.rs
src/snapshots/: dnstracer__args__tests__args_all_flags.snap  dnstracer__args__tests__args_default_values.snap  dnstracer__args__tests__args_ipv4_flag.snap  dnstracer__args__tests__args_query_type.snap  dnstracer__args__tests__args_server_override.snap  dnstracer__args__tests__args_source_v4.snap  dnstracer__args__tests__args_source_v6.snap  dnstracer__args__tests__bad_args_invalid_ipv4.snap  dnstracer__args__tests__bad_args_invalid_ipv6.snap  dnstracer__args__tests__bad_args_invalid_query_type.snap  dnstracer__args__tests__bad_args_invalid_retries.snap  dnstracer__args__tests__not_valid_source_v4_plus_ipv6_flag.snap  dnstracer__args__tests__not_valid_source_v6_plus_ipv4_flag.snap  dnstracer__args__tests__record_Mx.snap  dnstracer__args__tests__record_dS.snap  dnstracer__args__tests__record_soa.snap
