[package]
name = "dnstracer"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "A DNS traceroute tool"
readme = "README.md"
keywords = ["DNS", "traceroute"]
homepage = "https://gitlab.com/mat813/dnstracer-rs"
repository = "https://gitlab.com/mat813/dnstracer-rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
hickory-client = "0.24.1"
hickory-proto = "0.24.1"
hickory-resolver = "0.24.1"
itertools = "0.13.0"
tokio = { version = "1.42.0", features = ["full"] }
