[package]
name = "dnstracer"
version = "1.1.3"
edition = "2021"
license = "MIT"
description = "A DNS traceroute tool"
readme = "README.md"
keywords = ["DNS", "traceroute"]
homepage = "https://gitlab.com/mat813/dnstracer-rs"
repository = "https://gitlab.com/mat813/dnstracer-rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
hickory-client = "0.24.2"
hickory-proto = "0.24.2"
hickory-resolver = "0.24.2"
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
