[package]
name = "dnstracer"
version = "1.1.7"
edition = "2024"
license = "MIT"
description = "A DNS traceroute tool"
readme = "README.md"
keywords = ["DNS", "traceroute"]
homepage = "https://gitlab.com/mat813/dnstracer-rs"
repository = "https://gitlab.com/mat813/dnstracer-rs"

[dependencies]
clap = { version = "=4.5.48", features = ["derive"] }
eyre = "=0.6.12"
hickory-client = "=0.25.2"
hickory-proto = "=0.25.2"
hickory-resolver = "=0.25.2"
itertools = "=0.14.0"
tokio = { version = "=1.47.1", features = ["full"] }

[lints.clippy]
# https://github.com/rust-lang/rust-clippy/issues/11916
# self_named_module_files = "warn"
allow_attributes_without_reason = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
assigning_clones = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
create_dir = "warn"
dbg_macro = "warn"
else_if_without_else = "warn"
exit = "deny"
expect_used = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
integer_division = "warn"
match_like_matches_macro = "warn"
match_same_arms = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
nursery = { level = "warn", priority = -1 }
option_as_ref_deref = "warn"
panic = "deny"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "deny"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_slice = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unused_trait_names = "deny"
unwrap_in_result = "warn"
unwrap_used = "warn"

[dev-dependencies]
insta = "=1.43.2"
